--- a/day-1-flexbox/2-flexbox-intro/css/boxes.css
+++ b/day-1-flexbox/2-flexbox-intro/css/boxes.css
@@ -6,6 +6,14 @@ ul {
 	padding: 0;
 	margin: 0;
 	border: 1px dotted red;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content:center;
+
+
+
+
 }
 li {
 	border: 1px solid #999;
@@ -13,6 +21,10 @@ li {
 	padding: 0.5em;
 }
 
+.row{
+	display: flex;
+	flex-direction: ;
+}
 
 
 
