--- a/day-1-flexbox/5-image-gallery/begin/gallery.css
+++ b/day-1-flexbox/5-image-gallery/begin/gallery.css
@@ -13,6 +13,16 @@ ul {
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
+	display: flex;
+	flex-flow: row wrap;
+}
+
+li{
+	flex:auto;
+
+}
+img{
+	width: 100%;
 }
 @media (min-width: 550px) {
 }
