--- a/day-2-grid/10-mondrian-you-try-it/begin/youtryit.css
+++ b/day-2-grid/10-mondrian-you-try-it/begin/youtryit.css
@@ -2,43 +2,64 @@
 .wrapper {
   width: 633px;
   height: 458px;
-  background: url(mondrian2.png) no-repeat;
- 
+  /* background: url(mondrian2.png) no-repeat; */
+  display: grid;
+  gap: 5px;
+  grid-template-rows: 85px 65px 70px 70px 140px;
+	grid-template-columns: 304px 92px 153px 68px;
+  background-color: black;
+
 }
 div {
 	border: 1px solid black;
 	background-color: white;
-	opacity: 0.5;
+	/* opacity: 0.5; */
 }
 .a {
-
+grid-row: 1/5 ;
+grid-column: 1/2;
+background-color: red;
 }
 .b {
-
+  grid-row:1/2 ;
+  grid-column:2/3 ;
+  background-color: yellow;
 }
 .c {
-
+  grid-row:1/3 ;
+  grid-column:3/4 ;
 }
 .d {
-
+  grid-row:1/2 ;
+  grid-column:4/5 ;
+  background-color: red;
 }
 .e {
-
+  grid-row: 2/5;
+  grid-column: 2/3;
 }
 .f {
-
+  grid-row:3/4 ;
+  grid-column: 3/4;
+  background-color: blue;
 }
 .g {
-	
+	grid-row:2/4 ;
+grid-column: 4/5;
 }
 .h {
-	
+	grid-row:5/6 ;
+grid-column:1/2 ;
 }
 .i {
-	
+	grid-row:5/6;
+grid-column: 2/3;
+background-color: blue;
 }
 .j {
-	
+	grid-row: 4/6;
+grid-column: 3/5;
+background-color: yellow;
 }
 
 
