--- a/day-2-grid/14-grid-offsets/begin/offsets.css
+++ b/day-2-grid/14-grid-offsets/begin/offsets.css
@@ -24,6 +24,12 @@ article aside {
 	padding: 0.5em;
 	border-radius: 0.5em;
 }
+.nested{
+	display: grid;
+	gap: 1em;
+	grid-template-columns: auto;
+}
+
 
 @media (min-width: 650px) { 
 	header {
@@ -37,6 +43,16 @@ article aside {
 	.sidebar {
 		grid-column: 2 / 3;
 		grid-row: 1 / 3;
+	}
+	.nested{
+		grid-template-columns: repeat (3,1fr);
+		grid-template-areas: "aside1 ... aside3";
+	}
+	.nested aside:first-child{
+		grid-area: aside1;
+	}
+	.nested aside:last-child{
+		grid-area: aside3;
 	}
 }
 @media (min-width: 1000px) { 
